# mblas-bench

./: .gitignore  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  makefile  test.yaml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  cuda-build.yml  rocm-7.0.2-build.yml  rocm-build.yml
examples/: 4k_gemms.yaml  f64.yaml  f8_gemms.yaml  fp4.yaml  test.yaml  test_block_format.yaml  test_inline_format.yaml
src/: CMakeLists.txt  genericGemm.cpp  genericGemm.h  mblasBench-hip.cpp  mblasBench.cpp  mblas_bench.cpp  yaml_parser.h
src/cublas/: CMakeLists.txt  cublasConvert.cu  cublasConvert.h  cublasCreateAllocate.cpp  cublasCreateAllocate.h  cublasDtypeUtils.cpp  cublasDtypeUtils.h  cublasGemm.cpp  cublasGemm.h  cublasGemmFactory.cpp  cublasGemmFactory.h  cublasLtGemm.cpp  cublasLtGemm.h  cublasLtGemmFactory.cpp  cublasLtGemmFactory.h  cublas_convert.cu  cublas_convert.h  cublas_create_allocate.cpp  cublas_create_allocate.h  cublas_datatype_utils.cpp  cublas_datatype_utils.h  cublas_gemm.cpp  cublas_gemm.h  cublaslt_gemm.cpp  cublaslt_gemm.h  cudaError.cpp  cudaError.h  cuda_error.h  cuda_freq_monitor.h  cuda_monitor.h  mblasCuComputeType.cpp  mblasCuComputeType.h  mblasCuDataType.cpp  mblasCuDataType.h  mblasCuOperation.cpp  mblasCuOperation.h  mblas_cuda_compute_type.cpp
src/dummy/cublas/: cublasGemm.h  cublasGemmFactory.h  cublasLtGemm.h  cublasLtGemmFactory.h
src/dummy/hipblaslt/: hipblaslt_gemm_factory.h
src/dummy/rocblas/: hipblasLtGemmFactory.h  rocblasGemm.h  rocblasGemmFactory.h
src/generic/: CMakeLists.txt  compound_init.h  genericGemm.cpp  genericGemm.h  genericGemmFactory.h  genericInit.h  genericSetup.cpp  genericSetup.h  generic_gemm.cpp  generic_gemm.h  generic_gemm_factory.h  generic_init.cpp  generic_init.h  generic_setup.cpp  generic_setup.h  mblasComputeType.cpp  mblasComputeType.h  mblasData.h  mblasDataType.cpp  mblasDataType.h  mblasOperation.cpp  mblasOperation.h  mblas_compute_type.cpp  mblas_compute_type.h  mblas_data.h  mblas_data_type.cpp  mblas_data_type.h
src/hip/: CMakeLists.txt  hip_convert.h  hip_convert.hip  hip_convert_fp4.hip  hip_convert_fp6.hip  hip_create_allocate.cpp  hip_create_allocate.h  hip_datatype_utils.cpp  hip_datatype_utils.h  hip_error.cpp  hip_error.h  mblas_hip_data_type.cpp  mblas_hip_data_type.h
src/hip/hipblaslt/: hipblaslt_gemm.cpp  hipblaslt_gemm.h  hipblaslt_gemm_factory.cpp  hipblaslt_gemm_factory.h  mblas_hipblas_compute_type.cpp  mblas_hipblas_compute_type.h  mblas_hipblas_operation.cpp  mblas_hipblas_operation.h
src/hip/rocblas/: mblas_rocblas_compute_type.cpp  mblas_rocblas_compute_type.h  mblas_rocblas_data_type.cpp  mblas_rocblas_data_type.h  mblas_rocblas_operation.cpp  mblas_rocblas_operation.h  rocblas_gemm.cpp  rocblas_gemm.h  rocblas_gemm_factory.cpp  rocblas_gemm_factory.h
src/hipblas/: cublasLtGemm.cpp  cublasLtGemm.h  cutest.cpp  hipError.cpp  hipError.h  hipblasConvert.h  hipblasConvert.hip  hipblasCreateAllocate.cpp  hipblasCreateAllocate.h  hipblasDtypeUtils.h  hipblasGemm.cpp  hipblasGemm.h
src/rocblas/: CMakeLists.txt  hip_convert.h  hip_convert.hip  hipblasLtGemm.cpp  hipblasLtGemm.h  hipblasLtGemmFactory.cpp  hipblasLtGemmFactory.h  hipblaslt_gemm.cpp  hipblaslt_gemm.h  mblasHipComputeType.cpp  mblasHipComputeType.h  mblasHipDataType.cpp  mblasHipDataType.h  mblasHipOperation.cpp  mblasHipOperation.h  mblasRocComputeType.cpp  mblasRocComputeType.h  mblasRocDataType.cpp  mblasRocDataType.h  mblasRocOperation.cpp  mblasRocOperation.h  mblas_hip_data_type.cpp  rocblasConvert.h  rocblasConvert.hip  rocblasCreateAllocate.cpp  rocblasCreateAllocate.h  rocblasDtypeUtils.cpp  rocblasDtypeUtils.h  rocblasError.cpp  rocblasError.h  rocblasGemm.cpp  rocblasGemm.h  rocblasGemmFactory.cpp  rocblasGemmFactory.h  rocblas_gemm.cpp  rocblas_gemm.h
